# echo-game

./: .gitignore  README.md  agents.md  alexanderdothis.md  decision-implementation-audit.md  decisions.md  main.py  package.json  prompt.md  pyproject.toml  requirements.md  todo.md  web_prompt.md  yes
echo_adventure/: __init__.py  __main__.py  app.py  config.py  decision_web.py  decisions.py  domain.py  echo.py  enums.py  events.py  metrics.py  models.py  scenario_generator.py  scoring.py  simulation.py  tests.py  ui_server.py
echo_adventure/api/: __init__.py  automation.py  developer.py  payloads.py  review.py  server.py  session.py  view.py
echo_adventure/cli/: __init__.py  input.py  menus.py  renderer.py
echo_adventure/decisions/: __init__.py  cards.py  definitions.py  effects.py  graph.py  scoring.py  selectors.py
echo_adventure/schedulers/: __init__.py  automated.py  base.py  manual.py
echo_adventure/tests/: test_deterministic_decisions.py  test_echo_wins.py  test_reroute_invariants.py
echo_adventure/ui/: __init__.py  api.js  app.js  dayClock.js  devTools.js  html.js  index.html  modals.js  renderDecisions.js  renderFinal.js  renderMetrics.js  renderSummary.js  server.py  session.py  state.js  styles.css  submarineVisual.js  tutorial.js  view.py
scripts/: benchmark_decision_web.py
tests/: __init__.py  helpers.py  test_api_payloads.py  test_cards_and_echo.py  test_config_and_models.py  test_decisions.py  test_events.py  test_existing_regressions.py  test_metrics_simulation_schedulers.py
tests/api/: helpers.py  test_api_payloads.py  test_decisions.py  (+12 more)
(+16 files in other folders)
