[project]
name = "echo-adventure"
version = "0.1.0"
description = "Browser scheduling strategy game with a hidden automated scheduler benchmark."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
echo-adventure = "echo_adventure.app:main"
echo-adventure-ui = "echo_adventure.ui.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
