[project]
name = "echo_adventure"
version = "1"
description = "Shipbuilding Choose Your Own Adventure Game"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
echo-adventure = "echo_adventure.app:main"

[tool.setuptools.package-data]
"echo_adventure.ui" = ["*.html", "*.css", "*.js"]

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"
